[gd_scene load_steps=5 format=3 uid="uid://d101hoypeqd24"]

[ext_resource type="Script" uid="uid://b5eby67ds1760" path="res://scripts/welcome.gd" id="1"]
[ext_resource type="VideoStream" uid="uid://c11yxxwxs2nsn" path="res://assets/video/intro.ogv" id="2"]
[ext_resource type="Texture2D" uid="uid://dfu6kuveldhhn" path="res://assets/interactive_background.png" id="2_2o3na"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2o3na"]
bg_color = Color(0.71, 0.563858, 0.2485, 1)

[node name="Welcome" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -67.0
offset_bottom = 66.3334
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2o3na")
expand_mode = 2
stretch_mode = 5

[node name="VideoPlayer" type="VideoStreamPlayer" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource("2")
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.4
anchor_top = 0.3
anchor_right = 0.6
anchor_bottom = 0.6
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="VideoButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Watch Intro Video"

[node name="InfoButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "About Baishou Dance"

[node name="InfoPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
theme_override_styles/panel = SubResource("StyleBoxFlat_2o3na")

[node name="Label" type="Label" parent="InfoPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "The Baishou Dance is a traditional Tujia cultural ritual..."
autowrap_mode = 1

[node name="Button" type="Button" parent="InfoPanel"]
layout_mode = 0
offset_left = 335.0
offset_top = 348.0
offset_right = 431.0
offset_bottom = 379.0
text = "Back"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VideoButton" to="." method="_on_video_button_pressed"]
[connection signal="pressed" from="VBoxContainer/InfoButton" to="." method="_on_info_button_pressed"]
[connection signal="pressed" from="InfoPanel/Button" to="." method="_on_Button_pressed"]
